# Ticket

.cursor/: context.mdc
.cursor/rules/: architecture.mdc  general.mdc  langchain.mdc  tailwind.mdc
backend/: README.md  pyproject.toml
backend/src/agent/: __init__.py  agent.py  main.py
backend/src/agent/shared/: interfaces.py
backend/src/agent/tools/: github.py
backend/src/agent/tools/github/: __init__.py  comments.py  comments_graphql.py  graphql_utils.py  issues.py  issues_graphql.py  labels.py  labels_graphql.py  main.py  utils.py
backend/src/api/: main.py
task/: README.md  package-lock.json  package.json
task/src/lib/: api.ts
task/src/lib/components/: Input.svelte
task/src/lib/data/: conversations.ts
task/src/routes/: +page.svelte  Header.svelte  Input.svelte  MessageStatus.svelte  Repo.svelte  Sidebar.svelte  Source.svelte
task/src/routes/signin/: +page.svelte
task/src/routes/signup/: +page.svelte
