[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.0",
    "fastapi[standard]>=0.128.4",
    "httpx>=0.28.1",
    "langchain>=1.2.9",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic>=2.12.5",
]
